--- a/flowersgallery/locale/ar/LC_MESSAGES/django.po
+++ b/flowersgallery/locale/ar/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-08-03 15:26+0000\n"
+"POT-Creation-Date: 2020-08-07 11:43+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -22,3 +22,11 @@ msgstr ""
 #: templates/home.html:64
 msgid "More"
 msgstr "المزيد"
+
+#: templates/registration/login.html:67
+msgid "You have not registered yet?"
+msgstr "مابعد تسجل معانا ؟"
+
+#: templates/registration/login.html:67
+msgid "Register Here"
+msgstr "سجل من هنا"
